test/e2e/testdata/templates/ingress-snippet/module/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e2e-ingress
  namespace: e2e-ingress-snippet
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Custom-Header "value";
spec:
  rules:
    - host: e2e.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: e2e-svc
                port:
                  number: 80
